--- a/models/Multi_class_regional_damage_classification_and_estimation_model.ipynb
+++ b/models/Multi_class_regional_damage_classification_and_estimation_model.ipynb
@@ -742,6 +742,15 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "## Below code is for the disater affected place highlighting functionality ##"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 44,
       "metadata": {
         "id": "hy236zTIpLRl"
