--- a/models/Multi_class_regional_damage_classification_and_estimation_model.ipynb
+++ b/models/Multi_class_regional_damage_classification_and_estimation_model.ipynb
@@ -746,7 +746,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "## Below code is for the disater affected place highlighting functionality ##"
+        "## Below code is for the disater affected place highlighting functionality according to the labels (OPTIONAL CODE)##"
       ]
     },
     {
